---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/expressions/python_features.hyper
---
injections:
  - end: 11
    prefix: "from hyper import escape, replace_markers\n\ndef PythonFeatures("
    start: 0
    suffix: ""
    type: python
  - end: 22
    prefix: ", "
    start: 12
    suffix: ""
    type: python
  - end: 33
    prefix: ", "
    start: 23
    suffix: ""
    type: python
  - end: 82
    prefix: ") -> str:\n    _parts = []\n    if "
    start: 61
    suffix: ""
    type: python
  - end: 103
    prefix: ":\n        _parts.append(f\"\"\"<span>Found ‹ESCAPE:{"
    start: 100
    suffix: ""
    type: python
  - end: 250
    prefix: "}› items</span>\"\"\")\n    sorter = lambda x: x.lower()\n    sorted_items = sorted(items, key=sorter)\n    _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 236
    suffix: ""
    type: python
  - end: 326
    prefix: "}›</span>\"\"\")\n    first, *rest = items\n    _parts.append(f\"\"\"<span>First: ‹ESCAPE:{"
    start: 319
    suffix: ""
    type: python
  - end: 340
    prefix: "}›, Rest: ‹ESCAPE:{"
    start: 334
    suffix: ""
    type: python
  - end: 432
    prefix: "}›</span>\"\"\")\n    merged = {**data, \"extra\": \"value\"}\n    _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 424
    suffix: ""
    type: python
  - end: 514
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 482
    suffix: ""
    type: python
  - end: 613
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 546
    suffix: ""
    type: python
  - end: 665
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 657
    suffix: ""
    type: python
  - end: 688
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 679
    suffix: ""
    type: python
  - end: 766
    prefix: "}›</span>\"\"\")\n    args = [1, 2, 3]\n    _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 754
    suffix: ""
    type: python
  - end: 861
    prefix: "}›</span>\"\"\")\n    kwargs = {\"sep\": \", \", \"end\": \"!\"}\n    result = \"hello\"\n    _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 853
    suffix: "}›</span>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 73
    compiled_start: 62
    range_type: Python
    source_end: 11
    source_start: 0
  - compiled_end: 85
    compiled_start: 75
    range_type: Python
    source_end: 22
    source_start: 12
  - compiled_end: 97
    compiled_start: 87
    range_type: Python
    source_end: 33
    source_start: 23
  - compiled_end: 151
    compiled_start: 130
    range_type: Python
    source_end: 82
    source_start: 61
  - compiled_end: 201
    compiled_start: 200
    range_type: Python
    source_end: 103
    source_start: 100
  - compiled_end: 348
    compiled_start: 336
    range_type: Python
    source_end: 250
    source_start: 236
  - compiled_end: 436
    compiled_start: 431
    range_type: Python
    source_end: 326
    source_start: 319
  - compiled_end: 459
    compiled_start: 455
    range_type: Python
    source_end: 340
    source_start: 334
  - compiled_end: 556
    compiled_start: 550
    range_type: Python
    source_end: 432
    source_start: 424
  - compiled_end: 610
    compiled_start: 580
    range_type: Python
    source_end: 514
    source_start: 482
  - compiled_end: 699
    compiled_start: 634
    range_type: Python
    source_end: 613
    source_start: 546
  - compiled_end: 729
    compiled_start: 723
    range_type: Python
    source_end: 665
    source_start: 657
  - compiled_end: 760
    compiled_start: 753
    range_type: Python
    source_end: 688
    source_start: 679
  - compiled_end: 842
    compiled_start: 832
    range_type: Python
    source_end: 766
    source_start: 754
  - compiled_end: 959
    compiled_start: 953
    range_type: Python
    source_end: 861
    source_start: 853
